[project]
name = "rf-solver-edit-diffusers"
version = "0.1.0"
description = "A lightweight implementation of RF-Solver-Edit with diffusers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.8.1",
    "diffusers==0.34.0",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.53.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.11.11"]

[tool.ruff]
exclude = [".venv", "data", ".vscode", ".ipynb_checkpoints", ".typings"]
line-length = 110
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
