[project]
name = "rectified-flow-image-editing"
version = "0.1.0"
description = "A unified implementation of multiple Rectified Flow (RF)-based image editing approaches built upon the 🤗 Diffusers library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.10.1",
    "diffusers==0.35.1",
    "protobuf==6.31.1",
    "sentencepiece==0.2.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.56.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.11",
    "scienceplots>=2.1.1",
    "hf-xet>=1.1.8",
    "seaborn>=0.13.2",
    "ipywidgets>=8.1.7",
]

[tool.ruff]
exclude = [".venv", "data", ".vscode", ".ipynb_checkpoints", ".typings"]
line-length = 110
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
